Enhance SEO and social sharing metadata in index.html; update game images to use <img> tags for better accessibility and performance; improve game image styling in styles.css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Skillex builds distinct, high-polish slot games with demo-ready web and mobile experiences." />
+  <meta name="keywords" content="Skillex slot games, jackpot pinball, cash slicer, ninja's fortune, bonus review, slot demos" />
+  <meta property="og:title" content="Skillex | Signature Slot Games" />
+  <meta property="og:description" content="Experience Skillex signature titles: Bonus Review, Cash Slicer, Ninja's Fortune, and Jackpot Pinball." />
+  <meta property="og:image" content="https://skillexgames.com/assets/images/bonus-review.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://skillexgames.com/" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Skillex | Signature Slot Games" />
+  <meta name="twitter:description" content="Distinct slot worlds with smooth-feel math models. Play the demos." />
+  <meta name="twitter:image" content="https://skillexgames.com/assets/images/bonus-review.png" />
+  <link rel="canonical" href="https://skillexgames.com/" />
   <title>Skillex | Signature Slot Games</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Skillex",
+    "url": "https://skillexgames.com/",
+    "description": "Skillex builds distinct, high-polish slot games with demo-ready web and mobile experiences.",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://skillexgames.com/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
 </head>
 <body>
   <header class="top-bar">
@@ -55,7 +81,9 @@
       </div>
       <div class="games-grid">
         <article class="game-card">
-          <div class="game-image" style="background-image: url('assets/images/bonus-review.png');"></div>
+          <div class="game-image">
+            <img src="assets/images/bonus-review.png" alt="Bonus Review slot game" loading="lazy" />
+          </div>
           <div class="game-body">
             <div class="pill pill-amber">Urban thrill</div>
             <h3>Bonus Review</h3>
@@ -67,7 +95,9 @@
         </article>
 
         <article class="game-card">
-          <div class="game-image" style="background-image: url('assets/images/cash-slicer.png');"></div>
+          <div class="game-image">
+            <img src="assets/images/cash-slicer.png" alt="Cash Slicer slot game" loading="lazy" />
+          </div>
           <div class="game-body">
             <div class="pill pill-lime">Slice & win</div>
             <h3>Cash Slicer</h3>
@@ -79,7 +109,9 @@
         </article>
 
         <article class="game-card">
-          <div class="game-image" style="background-image: url('assets/images/ninjas-fortune.png');"></div>
+          <div class="game-image">
+            <img src="assets/images/ninjas-fortune.png" alt="Ninja's Fortune slot game" loading="lazy" />
+          </div>
           <div class="game-body">
             <div class="pill pill-rose">Cinematic</div>
             <h3>Ninja's Fortune</h3>
@@ -91,7 +123,9 @@
         </article>
 
         <article class="game-card">
-          <div class="game-image" style="background-image: url('assets/images/jackpot-pinball.png');"></div>
+          <div class="game-image">
+            <img src="assets/images/jackpot-pinball.png" alt="Jackpot Pinball slot game" loading="lazy" />
+          </div>
           <div class="game-body">
             <div class="pill pill-cyan">Neon rush</div>
             <h3>Jackpot Pinball</h3>
