Update game descriptions for improved engagement and clarity

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 </head>
 <body>
   <header class="top-bar">
-    <div class="brand">Skillex</div>
+    <div class="brand logo-brand">
+      <img src="assets/images/skillex-logo.svg" alt="Skillex" class="logo-img" />
+    </div>
     <nav class="nav-links" aria-label="Primary">
       <a href="#games">Games</a>
       <a href="#why">Why Skillex</a>
@@ -87,7 +89,7 @@
           <div class="game-body">
             <div class="pill pill-amber">Urban thrill</div>
             <h3>Bonus Review</h3>
-            <p>90s office vibes, punchy bonuses, and replay-friendly pacing.</p>
+            <p>A stressed office worker turns chaos into rewards in this fast-paced, darkly humorous bonus-driven slot.</p>
             <div class="game-actions">
               <a class="btn btn-small" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-bonusreview&language=en&currency=USD&lobby_url=%2Flobby%2Fdemo%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
             </div>
@@ -101,7 +103,7 @@
           <div class="game-body">
             <div class="pill pill-lime">Slice & win</div>
             <h3>Cash Slicer</h3>
-            <p>Fresh, tactile slicing mechanic with crisp art direction and upbeat audio.</p>
+            <p>Slice flying fruit and cash in a rapid-fire arcade experience packed with combos, multipliers, and juicy rewards.</p>
             <div class="game-actions">
               <a class="btn btn-small" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-cashslicer&language=en&currency=USD&lobby_url=%2Flobby%2Fdemo%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
             </div>
@@ -115,7 +117,7 @@
           <div class="game-body">
             <div class="pill pill-rose">Cinematic</div>
             <h3>Ninja's Fortune</h3>
-            <p>High-polish low-poly world with precision pacing and elegant win reveals.</p>
+            <p>Guide a fearless ninja through mystical islands to unlock hidden treasures and powerful fortune bonuses.</p>
             <div class="game-actions">
               <a class="btn btn-small" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-ninjasfortune&language=en&currency=USD&lobby_url=%2Flobby%2Fdemo%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
             </div>
@@ -129,7 +131,7 @@
           <div class="game-body">
             <div class="pill pill-cyan">Neon rush</div>
             <h3>Jackpot Pinball</h3>
-            <p>Retro-future tables, high-voltage color, and clean physics-driven wins.</p>
+            <p>Classic pinball meets neon jackpots with music-driven bumpers, fast action, and escalating bonus scores.</p>
             <div class="game-actions">
               <a class="btn btn-small" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-jackpotpinball&language=en&currency=USD&lobby_url=%2Flobby%2Fdemo%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
             </div>
@@ -179,7 +181,9 @@
 
   <footer class="footer">
     <div class="footer__brand">
-      <div class="brand">Skillex</div>
+      <div class="brand logo-brand">
+        <img src="assets/images/skillex-logo.svg" alt="Skillex" class="logo-img" />
+      </div>
       <p>Unique slot games built to be remembered.</p>
     </div>
     <div class="footer__links">
