Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
   <header class="top-bar">
     <div class="brand logo-brand">
-      <img src="assets/images/skillex-logo.svg" alt="Skillex" class="logo-img" />
+      <img src="assets/images/skillex-logo.png" alt="Skillex" class="logo-img" />
     </div>
     <nav class="nav-links" aria-label="Primary">
       <a href="#games">Games</a>
@@ -182,7 +182,7 @@
   <footer class="footer">
     <div class="footer__brand">
       <div class="brand logo-brand">
-        <img src="assets/images/skillex-logo.svg" alt="Skillex" class="logo-img" />
+        <img src="assets/images/skillex-logo.png" alt="Skillex" class="logo-img" />
       </div>
       <p>Unique slot games built to be remembered.</p>
     </div>
