Refactor header navigation structure and styling for improved layout and alignment

--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
     <div class="brand logo-brand">
       <img src="assets/images/skillex-logo.png" alt="Skillex" class="logo-img" />
     </div>
-    <nav class="nav-links" aria-label="Primary">
-      <a href="#games">Games</a>
-      <a href="#why">Why Skillex</a>
-      <a href="#cta">Partners</a>
-    </nav>
-    <a class="btn btn-ghost" href="mailto:contact@skillexgames.com">Contact</a>
+    <div class="header-nav-group">
+      <nav class="nav-links" aria-label="Primary">
+        <a href="#games">Games</a>
+        <a href="#why">Why Skillex</a>
+        <a href="#cta">Partners</a>
+      </nav>
+      <a class="btn btn-ghost" href="mailto:contact@skillexgames.com">Contact</a>
+    </div>
   </header>
 
   <main>
