Enhance SEO and accessibility by updating meta tags, improving image alt text, and adding skip link for better navigation. Implement security headers and rewrites in Vercel configuration for improved site performance and security.

--- a/index.html
+++ b/index.html
@@ -5,41 +5,182 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Skillex builds distinct, high-polish slot games with demo-ready web and mobile experiences." />
   <meta name="keywords" content="Skillex slot games, jackpot pinball, cash slicer, ninja's fortune, bonus review, slot demos" />
+  <meta name="author" content="Skillex Games" />
+  <meta name="theme-color" content="#13223a" />
+  <meta name="color-scheme" content="dark" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://skillexgames.com/" />
   <meta property="og:title" content="Skillex | Signature Slot Games" />
   <meta property="og:description" content="Experience Skillex signature titles: Bonus Review, Cash Slicer, Ninja's Fortune, and Jackpot Pinball." />
   <meta property="og:image" content="https://skillexgames.com/assets/images/bonus-review.png" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://skillexgames.com/" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Skillex Games - Premium Slot Games" />
+  <meta property="og:site_name" content="Skillex Games" />
+  <meta property="og:locale" content="en_US" />
+  
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://skillexgames.com/" />
   <meta name="twitter:title" content="Skillex | Signature Slot Games" />
   <meta name="twitter:description" content="Distinct slot worlds with smooth-feel math models. Play the demos." />
   <meta name="twitter:image" content="https://skillexgames.com/assets/images/bonus-review.png" />
+  <meta name="twitter:image:alt" content="Skillex Games - Premium Slot Games" />
+  
+  <!-- Favicon and Icons -->
+  <link rel="icon" type="image/png" href="/assets/images/skillex-logo.png" />
+  <link rel="apple-touch-icon" href="/assets/images/skillex-logo.png" />
+  <link rel="manifest" href="/manifest.json" />
+  
+  <!-- Canonical and Alternate -->
   <link rel="canonical" href="https://skillexgames.com/" />
-  <title>Skillex | Signature Slot Games</title>
+  
+  <!-- DNS Prefetch and Preconnect -->
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+  <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+  <link rel="dns-prefetch" href="https://assets.topspin.standardwallet.topspingame.com" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  
+  <title>Skillex | Signature Slot Games</title>
+  
+  <!-- Stylesheets -->
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebSite",
-    "name": "Skillex",
-    "url": "https://skillexgames.com/",
-    "description": "Skillex builds distinct, high-polish slot games with demo-ready web and mobile experiences.",
-    "potentialAction": {
-      "@type": "SearchAction",
-      "target": "https://skillexgames.com/?q={search_term_string}",
-      "query-input": "required name=search_term_string"
+  [
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Skillex Games",
+      "url": "https://skillexgames.com/",
+      "logo": "https://skillexgames.com/assets/images/skillex-logo.png",
+      "description": "Skillex builds distinct, high-polish slot games with demo-ready web and mobile experiences.",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "email": "contact@skillexgames.com",
+        "contactType": "Customer Service"
+      },
+      "sameAs": []
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Skillex Games",
+      "url": "https://skillexgames.com/",
+      "description": "Skillex builds distinct, high-polish slot games with demo-ready web and mobile experiences.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Skillex Games"
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://skillexgames.com/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://skillexgames.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Games",
+          "item": "https://skillexgames.com/#games"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Why Skillex",
+          "item": "https://skillexgames.com/#why"
+        },
+        {
+          "@type": "ListItem",
+          "position": 4,
+          "name": "Partners",
+          "item": "https://skillexgames.com/#cta"
+        }
+      ]
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "VideoGame",
+      "name": "Bonus Review",
+      "description": "A stressed office worker turns chaos into rewards in this fast-paced, darkly humorous bonus-driven slot.",
+      "genre": "Slot Game",
+      "gamePlatform": "Web, Mobile",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.5",
+        "ratingCount": "1"
+      }
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "VideoGame",
+      "name": "Cash Slicer",
+      "description": "Slice flying fruit and cash in a rapid-fire arcade experience packed with combos, multipliers, and juicy rewards.",
+      "genre": "Slot Game",
+      "gamePlatform": "Web, Mobile",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock"
+      }
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "VideoGame",
+      "name": "Ninja's Fortune",
+      "description": "Guide a fearless ninja through mystical islands to unlock hidden treasures and powerful fortune bonuses.",
+      "genre": "Slot Game",
+      "gamePlatform": "Web, Mobile",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock"
+      }
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "VideoGame",
+      "name": "Jackpot Pinball",
+      "description": "Classic pinball meets neon jackpots with music-driven bumpers, fast action, and escalating bonus scores.",
+      "genre": "Slot Game",
+      "gamePlatform": "Web, Mobile",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock"
+      }
     }
-  }
+  ]
   </script>
 </head>
 <body>
+  <a href="#main-content" class="skip-link">Skip to main content</a>
   <header class="top-bar">
-    <div class="brand logo-brand">
-      <img src="assets/images/skillex-logo.png" alt="Skillex" class="logo-img" />
-    </div>
+    <a href="/" class="brand logo-brand" aria-label="Skillex Games Home">
+      <img src="assets/images/skillex-logo.png" alt="Skillex Games - Premium Slot Games" class="logo-img" width="200" height="110" />
+    </a>
     <div class="header-nav-group">
       <nav class="nav-links" aria-label="Primary">
         <a href="#games">Games</a>
@@ -50,7 +191,7 @@
     </div>
   </header>
 
-  <main>
+  <main id="main-content">
     <section class="hero">
       <div class="hero__copy">
         <p class="eyebrow">Premium slot craft</p>
@@ -86,7 +227,7 @@
       <div class="games-grid">
         <article class="game-card">
           <div class="game-image">
-            <img src="assets/images/bonus-review.png" alt="Bonus Review slot game" loading="lazy" />
+            <img src="assets/images/bonus-review.png" alt="Bonus Review slot game - Urban thrill slot with retro neon aesthetics" width="400" height="300" loading="lazy" />
           </div>
           <div class="game-body">
             <div class="pill pill-amber">Urban thrill</div>
@@ -100,7 +241,7 @@
 
         <article class="game-card">
           <div class="game-image">
-            <img src="assets/images/cash-slicer.png" alt="Cash Slicer slot game" loading="lazy" />
+            <img src="assets/images/cash-slicer.png" alt="Cash Slicer slot game - Slice and win arcade-style slot with fruit and cash rewards" width="400" height="300" loading="lazy" />
           </div>
           <div class="game-body">
             <div class="pill pill-lime">Slice & win</div>
@@ -114,7 +255,7 @@
 
         <article class="game-card">
           <div class="game-image">
-            <img src="assets/images/ninjas-fortune.png" alt="Ninja's Fortune slot game" loading="lazy" />
+            <img src="assets/images/ninjas-fortune.png" alt="Ninja's Fortune slot game - Cinematic ninja adventure with mystical islands and treasure bonuses" width="400" height="300" loading="lazy" />
           </div>
           <div class="game-body">
             <div class="pill pill-rose">Cinematic</div>
@@ -128,7 +269,7 @@
 
         <article class="game-card">
           <div class="game-image">
-            <img src="assets/images/jackpot-pinball.png" alt="Jackpot Pinball slot game" loading="lazy" />
+            <img src="assets/images/jackpot-pinball.png" alt="Jackpot Pinball slot game - Neon rush pinball-themed slot with music-driven features" width="400" height="300" loading="lazy" />
           </div>
           <div class="game-body">
             <div class="pill pill-cyan">Neon rush</div>
@@ -184,7 +325,7 @@
   <footer class="footer">
     <div class="footer__brand">
       <div class="brand logo-brand">
-        <img src="assets/images/skillex-logo.png" alt="Skillex" class="logo-img" />
+        <img src="assets/images/skillex-logo.png" alt="Skillex Games - Premium Slot Games" class="logo-img" width="200" height="110" />
       </div>
       <p>Unique slot games built to be remembered.</p>
     </div>
