--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <meta name="twitter:image:alt" content="Skillex Games - Premium Slot Games" />
   
   <!-- Favicon and Icons -->
-  <link rel="icon" type="image/png" href="/assets/images/skillex-logo.png" />
-  <link rel="apple-touch-icon" href="/assets/images/skillex-logo.png" />
+  <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
+  <link rel="apple-touch-icon" href="/assets/images/favicon.png" />
   <link rel="manifest" href="/manifest.json" />
   
   <!-- Canonical and Alternate -->
