Update contact links to point to the new contact page and add styles for the contact form, enhancing user experience and accessibility.

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <a href="#why">Why Skillex</a>
         <a href="#cta">Partners</a>
       </nav>
-      <a class="btn btn-ghost" href="mailto:contact@skillexgames.com">Contact</a>
+      <a class="btn btn-ghost" href="/contact">Contact</a>
     </div>
   </header>
 
@@ -316,7 +316,7 @@
         <p>Book a slot in your lobby, run demo campaigns, or co-create a bespoke experience. We move fast and keep polish high.</p>
         <div class="cta__actions">
           <a class="btn" href="#games">Launch demos</a>
-          <a class="btn btn-ghost" href="mailto:contact@skillexgames.com">Contact sales</a>
+          <a class="btn btn-ghost" href="/contact">Contact sales</a>
         </div>
       </div>
     </section>
