Update contact form to use POST method and prevent default action for improved functionality

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
       </div>
 
       <div class="contact-form-container">
-        <form id="contact-form" class="contact-form" novalidate>
+        <form id="contact-form" class="contact-form" method="POST" action="javascript:void(0);" novalidate>
           <div class="form-group">
             <label for="name">Name <span class="required">*</span></label>
             <input 
