Update demo game links in index.html to include the correct lobby URL for improved navigation.

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <p class="panel-label">Latest launch</p>
           <h3>Bonus Review</h3>
           <p class="panel-note">Retro neon with sharp physics and high-velocity jackpots.</p>
-          <a class="mini-link" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-bonusreview&language=en&currency=USD&lobby_url=%2Flobby%2Fdemo%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
+          <a class="mini-link" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-bonusreview&language=en&currency=USD&lobby_url=https%3A%2F%2Fwww.skillexgames.com%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
         </div>
         <div class="panel-glow"></div>
       </div>
@@ -234,7 +234,7 @@
             <h3>Bonus Review</h3>
             <p>A stressed office worker turns chaos into rewards in this fast-paced, darkly humorous bonus-driven slot.</p>
             <div class="game-actions">
-              <a class="btn btn-small" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-bonusreview&language=en&currency=USD&lobby_url=%2Flobby%2Fdemo%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
+              <a class="btn btn-small" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-bonusreview&language=en&currency=USD&lobby_url=https%3A%2F%2Fwww.skillexgames.com%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
             </div>
           </div>
         </article>
@@ -248,7 +248,7 @@
             <h3>Cash Slicer</h3>
             <p>Slice flying fruit and cash in a rapid-fire arcade experience packed with combos, multipliers, and juicy rewards.</p>
             <div class="game-actions">
-              <a class="btn btn-small" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-cashslicer&language=en&currency=USD&lobby_url=%2Flobby%2Fdemo%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
+              <a class="btn btn-small" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-cashslicer&language=en&currency=USD&lobby_url=https%3A%2F%2Fwww.skillexgames.com%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
             </div>
           </div>
         </article>
@@ -262,7 +262,7 @@
             <h3>Ninja's Fortune</h3>
             <p>Guide a fearless ninja through mystical islands to unlock hidden treasures and powerful fortune bonuses.</p>
             <div class="game-actions">
-              <a class="btn btn-small" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-ninjasfortune&language=en&currency=USD&lobby_url=%2Flobby%2Fdemo%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
+              <a class="btn btn-small" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-ninjasfortune&language=en&currency=USD&lobby_url=https%3A%2F%2Fwww.skillexgames.com%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
             </div>
           </div>
         </article>
@@ -276,7 +276,7 @@
             <h3>Jackpot Pinball</h3>
             <p>Classic pinball meets neon jackpots with music-driven bumpers, fast action, and escalating bonus scores.</p>
             <div class="game-actions">
-              <a class="btn btn-small" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-jackpotpinball&language=en&currency=USD&lobby_url=%2Flobby%2Fdemo%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
+              <a class="btn btn-small" href="https://assets.topspin.standardwallet.topspingame.com/api/demo/launch?play_for_fun=true&game_id=sx-sg-jackpotpinball&language=en&currency=USD&lobby_url=https%3A%2F%2Fwww.skillexgames.com%2F&deposit_url=%2Flobby%2Fdposit%2F" target="_blank" rel="noreferrer noopener">Play demo</a>
             </div>
           </div>
         </article>
